<resources>
    <string name="app_name">11.10</string>
    <string name="long_text">
        <u>Травка</u>  зеленеет,\n
        <i>Сольнышко</i> блестит;\n
        <b>Ласточка</b>  с весною\n
        В сени к нам летит.\n\n

        С нею солнце краше\n
        И весна милей…\n
        Прощебечь с дороги\n
        Нам привет скорей!\n\n

        Дам тебе я зерен,\n
        А ты песню спой,\n
        Что из стран далеких\n
        Принесла с собой…\n

    </string>
    <string name="next_activ">ScrollingActivity</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="back_text">Назад</string>
    <string name="tach_active">Касания</string>
    <string name="camera_active">Камера</string>
    <string name="scech_book_active">Скетчбук</string>
    <string name="large_text">
        \n"Краткое содержание книги Гарри Поттер и философский камень Роулинг"\n\n
	"Гарри Поттер — мальчик со шрамом на лбу, воспитывающийся в семье дяди и тети. Родители мальчика погибли. Несладкая жизнь у сироты: избалованный двоюродный брат постоянно обижает его, взрослые ежедневно наказывают даже за крохотные проступки. Даже одежду приёмышу приходится донашивать за сводным братом. Сам Гарри худенький, поэтому кофты и штаны толстенного Дадли сильно свисают.

	Однажды Гарри приходит загадочное письмо. Но, не успел Гарри даже взглянуть на него, дядя отнимает его. Письма всё приходят и приходят, что приводит дядю в бешенство. В итоге мужчина увозит всю на остров, где нет почты. Там Гаррри находит великан Хагрид, который и рассказывает мальчику, что он волшебник. Великан забирает его с собой. Следующий день буквально шокирует Гарри. Оказывается, прямо под носами людей существует мир магов и волшебства. Гарри узнаёт, что в банке хранятся сбережения, которые ему оставили родители. Мальчик вместе с новым знакомым идут в банк, берут оттуда деньги и таинственный сверток.

	Затем мальчик заводит знакомство с Роном Уизли и Гермионой Грейнджер. Дети попадают на один факультет. В школе с первых минут пребывания у них появляются враги — Драко Малфой, и его приспешники Крэбб и Гойл. Их поддерживает Северус Снегг. Он постоянно придирается к Гарри, Рону и Гермионе, снимает из-за их проступков очки со всего факультета. Гарри берут в команду по квиддичу, он получает в подарок прекрасную метлу.

	Однажды, неразлучная троица случайно попадает в помещение, где на люке сидит трехголовый пес. Естественно, детям не терпится узнать, что охраняет животное. Хагрид проговаривается, что тайна известна лишь руководителю школы — Дамблдору и его другу Николасу Фламелю.

	При проведении квиддича кто-то пытается сбросить Гарри с метлы. Друзья убеждены, что это Северус. Затем они узнают, что Фламель создал филосовский камень — магический предмет, который служит для приготовления эликсира жизни.

	К Хагриду попадается яйцо, из которого вылупляется маленький дракончик. Гермиона, Гарри, Рон помогают лесничему переправить существо в безопасное место. Затем друзьям приходится ночью идти в Запретный лес, в котором кто-то убивает единорогов. Гарри встречается там со странным существом, попытавшимся убить мальчика. Кентавр спасает мальчика и рассказывает ему, кто стоит за всеми странными происшествиями. Изучив множество информации друзья узнают, что трехголовый пес посажен сторожить философский камень. Они предполагают, что Снег пытается похитить охраняемый предмет для Волан-де-Морта.

	Троица решает тайно идти в подземелье и отыскать философский камень. Решив три сложных задачи, Гарри подходит к волшебному зеркалу, около которого встречает учителя Квиррелла. Оказывается, он — помощник Темного Лорда. Учитель пытается узнать, где спрятан камень и взять его для Волан-де-Морта. Однако Гарри не хочет помогать злым волшебникам, спасает камень и уничтожает Квиррелла.

	Произведение учит читателей быть добрыми и помогать друг другу.

	Можете использовать этот текст для читательского дневника"





    </string>
    <string name="action_settings">Settings</string>
</resources>