<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="419dp"
                android:layout_height="235dp"
                android:src="@drawable/ptica" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_text"
                android:textSize="30sp"
                android:gravity="center_vertical"
                android:layout_marginLeft="30dp"
                android:textColor="@color/design_default_color_primary_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_activ"
                android:onClick="nextActiv"
                >

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tach_active"
                android:onClick="tachActiv"
                >

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_active"
                android:onClick="cameraActiv"
                >

            </Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scech_book_active"
                android:onClick="skechActiv"
                >

            </Button>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>